--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit>=1.28.0
-opencv-python>=4.8.0
-mediapipe>=0.10.0
-pyautogui>=0.9.54
+opencv-python-headless==4.8.1.78
 numpy>=1.24.0
+mediapipe>=0.10.0
+autopy>=4.0.0
+streamlit>=1.28.0
+protobuf>=3.20.0
