--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+setuptools_rust>=1.5.2
 opencv-python-headless==4.8.1.78
 numpy>=1.24.0
-mediapipe>=0.10.0
-autopy>=4.0.0
+mediapipe==0.10.20
+protobuf>=4.25.3
+pyautogui>=0.9.54
+python-tk>=3.12.0
 streamlit>=1.28.0
-protobuf>=3.20.0
+python3-xlib>=0.15
