--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-setuptools_rust>=1.5.2
-opencv-python-headless==4.8.1.78
-numpy>=1.24.0
-mediapipe==0.10.20
-protobuf>=4.25.3
-pyautogui>=0.9.54
-streamlit>=1.28.0
-python3-xlib>=0.15
+streamlit
+opencv-python
+mediapipe
+numpy
